<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="150dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_def_avatar_man" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/app_name"
            android:textSize="18sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/my_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_lx"
        android:background="@android:color/white"
        android:drawableRight="@drawable/ic_chevron_right_theme_24dp"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:padding="@dimen/margin"
        android:text="@string/my_info" />

    <TextView
        android:id="@+id/my_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@android:color/white"
        android:drawableRight="@drawable/ic_chevron_right_theme_24dp"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:padding="@dimen/margin"
        android:text="@string/my_collection" />


    <TextView
        android:id="@+id/youhui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin_small"
        android:background="@android:color/white"
        android:drawableRight="@drawable/ic_chevron_right_theme_24dp"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:padding="@dimen/margin"
        android:text="@string/youhui" />


    <TextView
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin_small"
        android:background="@android:color/white"
        android:drawableRight="@drawable/ic_chevron_right_theme_24dp"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:padding="@dimen/margin"
        android:text="@string/setting" />

</LinearLayout>