<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/appbar_layout_with_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_title"
            android:textSize="26sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_lx"
            android:layout_marginRight="@dimen/margin_lx"
            android:background="@drawable/selector_btn_theme_5dp_corner"
            android:foreground="?selectableItemBackground"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_lx"
            android:layout_marginRight="@dimen/margin_lx"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/shape_rect_5dp_corner_theme_border"
            android:foreground="?selectableItemBackground"
            android:text="@string/register"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>